tests/expected_output/implicit_function_declaration/000001-clang-16.0-x86_64-pc-linux-gnu.txt
implicit_function_declaration.c:2:5: error: call to undeclared function 'f'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
    f();
    ^
dcc explanation: you are calling a function named f line 2 of implicit_function_declaration.c but dcc does not recognize f as a function.
There are several possible causes:
  a) You might have misspelt the function name.
  b) You might need to add a #include line at the top of implicit_function_declaration.c.
  c) You might need to add a prototype for f.
